Fixed whitespace issue in portal feed

--- a/public/stylesheets/style.sass
+++ b/public/stylesheets/style.sass
@@ -110,6 +110,8 @@ body
   border-style: solid
   //color: darken(white, 3%)
   overflow: hidden
+  white-space: pre-wrap
+  word-wrap: normal
 
 .postcontent>.text
   margin: 1pc 0
